[package]
name = "porter-audio"
version = "0.1.0"
edition = "2024"

[features]
ms-adpcm = []
ima-adpcm = []
wwise-vorbis = ["dep:lewton"]
xma2-wma = ["dep:xma2-rs"]
raw-flac = []
ogg = ["dep:lewton", "lewton/ogg"]
debug = []

[dependencies]
porter-utils = { path = "../porter-utils" }

claxon.workspace = true
flacenc.workspace = true
serde.workspace = true
lewton = { workspace = true, optional = true }
xma2-rs = { workspace = true, optional = true }
