[package]
name = "porter-viewport"
version = "0.1.0"
edition = "2024"

[dependencies]
porter-utils = { path = "../porter-utils" }
porter-gpu = { path = "../porter-gpu" }
porter-model = { path = "../porter-model" }
porter-math = { path = "../porter-math" }
porter-texture = { path = "../porter-texture" }

wgpu.workspace = true
porter-audio = { path = "../porter-audio" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "derive"] }
rodio = "0.20.1"
